--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,25 +3,24 @@
   <div class="col s3 ">
       <span class="FooterTitle">Services</span>
     <ul>
-      <li>Web Development</li>
-      <li>Desktop Application</li>
-      <li>Mobile Apps</li>
-      <li>Ecommerce</li>
-      <li>Photo Outsourcing</li>
-      <li>Firebase</li>
-      <li>Search Engine Optimization</li>
-      <li>UX/Wordpress</li>
+      <li routerLink="/App-Development">Web Development</li>
+      <li routerLink="/Desktop-Development">Desktop Application</li>
+      <li routerLink="/Mobile-Development">Mobile Apps</li>
+      <li routerLink="/App-Development">Ecommerce</li>
+      <li routerLink="/Photo-Outsourcing">Photo Outsourcing</li>
+      <li routerLink="/App-Development">Firebase</li>
+      <li routerLink="/seo">Search Engine Optimization</li>
+      <li routerLink="/UI-Development">UX/Wordpress</li>
     </ul>
   </div>
   <div class="col s3 ">
     <span class="FooterTitle">Company</span>
     <ul>
-        <li>Home</li>
+        <li routerLink="/home">Home</li>
         <li>Services</li>
-        <li>Gallery</li>
-        <li>PhotoZing</li>
-        <li>Team</li>
-        <li>Contact us</li>
+        <li routerLink="/Portfolio">Gallery</li>
+        <li routerLink="/Photo-Outsourcing">PhotoZing</li>
+        <li routerLink="/team">Contact us</li>
       </ul>
   </div>
   <div class="col s3">
