--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,10 +21,14 @@
 
 
 
+<div class="row" style="margin-top:23% !important;padding-bottom: 10%;">
 
+<div class="col s5 why"><div class="floatText">A</div>Why do you need us?</div>
+<div class="col s6 whytxt">For the big ones, we rethink your ideas, revamp them with a new and different look. It gives us the responsibility of your brand's Digital Marketing and witness the clear uptick in your e-popularity & sales. Overall, we are the connoisseur in this niche.</div>
+</div>
 
 <!-- What we do -->
-<div class="row border" style="margin-top:23% !important;">
+<div class="row border" style="padding-bottom: 20px;">
         <h4 class="we">What we do..</h4>
         <div class="Innovation center">Innovation for Everyone..</div>
         <div class="col s12">
@@ -67,22 +71,22 @@
 <div class="service border" style="margin-top:10% !important;">
         <h4 class="we">Services..</h4>
         <div class="row" style="margin-top:4%;">
-                <div class="col s4 serviceB" routerLink="/Get-started">
-                        <h6 class="Ser">Web/UX Development</h6>
+                <div class="col s4 serviceB" routerLink="/UI-Development">
+                        <h6 class="Ser">UI/UX Development</h6>
                         <p><i class="fas fa-palette" style="color:#039be5"></i> UI/UX - We develope a stylish and colourful static / Dynamic website(Responsive) using <a href="https://en.wikipedia.org/wiki/HTML5">HTML5</a>, <a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets#CSS_3">CSS3</a>,  <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">JavaScript</a> and <a href="https://wordpress.com/"> wordpress</a>, and provide a support, maintenance, Search Engine optimization and hosting. For UX we have a best professional team to design a template, logo, wireframe etc.</p>
                 </div>
-                <div class="col s4 serviceB" routerLink="/Get-started">
+                <div class="col s4 serviceB" routerLink="/App-Development">
                                 <h6 class="Ser">Application Development</h6>
                                 <p><i class="fas fa-seedling"  style="color:#1aa93a"></i> We provide a awesome Responsive Web Application, Our team worked with Latest Technology (<a href="https://nodejs.org/en/">NodeJS</a> ,Python AI/MI, WebPack, Bower, Babel and Testing) and Frameworks (<a href="https://angular.io/">Angular</a>/<a href="https://reactjs.org/">React</a>/<a href="https://vuejs.org/">Vue</a>/<a href="https://www.djangoproject.com/">Django Python</a>). also provide a end to end support and cloud <a href="https://firebase.google.com/">Firebase </a> (hosting, database, storage, Authentication etc..) interaction.  </p>
                 </div>
-                <div class="col s4 serviceB" routerLink="/Get-started">
+                <div class="col s4 serviceB" routerLink="/Desktop-Development">
                                 <h6 class="Ser">Desktop Application</h6>
                                 <p> <i class="fas fa-laptop-code"  style="color:#ff833b"></i> Desktop Application - we provide a desktop application for all platform, here we use <a href="https://electronjs.org/">Electron</a> Framework that provide to write a code onces then we can generate application in all platform ios, Windows and Linux ,we include <a href="https://www.google.com/search?q=js+frameworks&rlz=1C1CHBF_enIN844IN844&oq=JS+frame&aqs=chrome.0.0j69i57j0l4.4660j1j7&sourceid=chrome&ie=UTF-8">JS framework</a> in the electron so Application look stylish and performance high.</p>
                 </div>
                 
         </div>
         <div class="row Row2">
-                <div class="col s4 serviceB" routerLink="/Get-started">
+                <div class="col s4 serviceB" routerLink="/Mobile-Development">
                                 <h6 class="Ser">Mobile Development</h6>
                                 <p><i class="fas fa-mobile-alt"  style="color:#dc13cb"></i> Mobile Apps - now a day developer and client facing a problem to create a app for All platform, because of cost and time problem, so we provide a Hybrid Mobile Application using <a href="https://ionicframework.com/">Ionic</a> Framework and Google <a href="https://flutter.dev/">Flutter</a> (Dart language). </p>
                 </div>
@@ -90,10 +94,37 @@
                                 <h6 class="Ser">PhotoOutSourcing</h6>
                                 <p><i class="fas fa-camera-retro"  style="color:#c21508"></i> We provide Consistent image output with quick turnaround time. Our team work with latest tools like <a href="https://www.adobe.com/products/photoshop.html ">Adobe Photoshop</a>, Photoshop CC, Lightroom CC, Lightroom Classic, Ptgui for image stitching.</p>
                 </div>
-                <div class="col s4 serviceB" routerLink="/Get-started">
+                <div class="col s4 serviceB" routerLink="/seo">
                                 <h6 class="Ser">SEO</h6>
                                 <p><i class="fas fa-globe-americas"  style="color:#5b4296"></i> Ranking First and higher growth is always everybody’s goal. Unitrix realise your goal and makes it reality by our SEO Services.We have planned strategy and protocol which will be followed to give our clients website top slot in the Search Engine.</p>
                 </div>
+        </div>
+</div>
+
+<!--client-->
+<div class="row client center" style="margin-top:4%;">
+<h1 class="subHead">TESTIMONIALS</h1>
+<h2 class="line">What our clients speak about us </h2>
+        <div class="col s12 center" style="margin-top: 1%;">
+                <rotate-carousel height="200px" width="700px" depth="700px" period="7s" direction="reverse">
+                <ng-template rotateCarouselItem>
+                        <div class="carouselTxt">
+                        <h5 style="padding: 12px;">Hi ! I'm <span class="clientName">Deepan Chakravarthi</span></h5>
+                        " I recommend Unitrix to everyone looking for app development. 
+The developers at the company were prompt in developing the seamless mobile applications 
+that not only fit my specifications but also exceeded my expectations.
+The app is not just attractive in the looks but also offers enhanced engagement to the users. 
+I am really impressed by their talent and professionalism."</div>
+                </ng-template>
+                <ng-template rotateCarouselItem>
+                        <div class="carouselTxt">
+                        <h5 style="padding: 12px;">Hi ! I'm <span class="clientName">Felisha</span></h5>
+                        "Unitrix is a highly skilled team with an eye for details.
+ We got exactly what we wanted and more. The project management and communication team 
+ works really well through the online project tools and the dedicated project manager
+ made a great job keeping things together. We are looking forward to the next collaboration!"</div>
+                </ng-template>
+                </rotate-carousel>
         </div>
 </div>
 
@@ -116,6 +147,7 @@
 
 <!-- responsive site -->
 <div class="row border" style="margin-top:5% !important;">
+
         <h4 class="we">About Us</h4>
         <div class="row">
                 <img src="../../assets/images/res.jpg" style="margin-left: 21%;width: 54%;">
@@ -124,12 +156,13 @@
                 
                 </p>
                 <div class="row center" style="margin-top:2% !important;">
-                        <span class="uniRedBtn" routerLink="/Get-started">GET STARTED</span>
+                        <span class="uniRedBtn" routerLink="/Get-started">GET QUOTE</span>
                 </div>
         </div>
 </div>
 
 <div class="row center" style="margin: 6% 0px;">
+<div class="floatText">W<span></span></div>
         <h6 class="webContent" style="font-size: 15px;">" We target the progress of web solutions to the requirement of the organization and align the layout towards the client who will value it to show outstanding experience, to reform processes, to deliver unique services over the internet and to unite information cautiously in a centralized cache and access it in real time."</h6>
 </div>
 </div>
