--- a/src/app/photo-zing/photo-zing.component.html
+++ b/src/app/photo-zing/photo-zing.component.html
@@ -8,20 +8,20 @@
 
 <mz-modal #bottomSheetModal [fixedFooter]="true" [bottomSheet]="true" [options]="modalOptions">
   <mz-modal-header>
-    <h5 class="right-align">Contact Details</h5>
+    
   </mz-modal-header>
-  <mz-modal-content>
-    <div class="row">
+  <mz-modal-content class="center-align">
+    <div class="row" style="text-align: -webkit-center;">
       <p class="styleTxt">PhotoZing</p>
       <ul class="icon">
           <li>
-              <div class="chip">
-                  <img src="../../assets/images/jaganRamanikanth.png" alt="Contact Person">
-                  Dhanush kodi
-                </div>
-          </li>
-          <li><i class="fas fa-address-book"></i> +91 962-977-7100</li>
-          <li><i class="fas fa-mail-bulk"></i> dhanushkodi95@gmail.com</li>
+                        <div>
+                        <img class="Myavatar center-align" src="../../assets/images/DK.jpeg">
+                        </div>
+                    </li>
+                     <li class="name">Dhanush Kodi</li>
+                    <li><i class="fas fa-address-book"></i><b> Mobile :</b> (+91) 962-977-7100</li>
+                    <li><i class="fas fa-mail-bulk"></i><b> Email :</b> dhanushkodi95@gmail.com</li>
         </ul>
 </div>
   </mz-modal-content>
@@ -102,42 +102,4 @@
       <div class="col s2">Office</div>
       <div class="col s2">Retail</div>
     </div>
-</div>
-
-<!-- Photo Grid -->
-<div class="roww" style="padding: 0 50px;"> 
-  <div class="column">
-    <img src="../../assets/images/w3/falls2.jpg" style="width:100%">
-    <img src="../../assets/images/w3/rocks.jpg" style="width:100%">
-    <img src="../../assets/images/w3/falls2.jpg" style="width:100%">
-    <img src="../../assets/images/w3/paris.jpg" style="width:100%">
-    <img src="../../assets/images/w3/nature.jpg" style="width:100%">
-    <img src="../../assets/images/w3/mist.jpg" style="width:100%">
-    <img src="../../assets/images/w3/paris.jpg" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="../../assets/images/w3/underwater.jpg" style="width:100%">
-    <img src="../../assets/images/w3/ocean.jpg" style="width:100%">
-    <img src="../../assets/images/w3/wedding.jpg" style="width:100%">
-    <img src="../../assets/images/w3/mountainskies.jpg" style="width:100%">
-    <img src="../../assets/images/w3/rocks.jpg" style="width:100%">
-    <img src="../../assets/images/w3/underwater.jpg" style="width:100%">
-  </div>  
-  <div class="column">
-    <img src="../../assets/images/w3/wedding.jpg" style="width:100%">
-    <img src="../../assets/images/w3/rocks.jpg" style="width:100%">
-    <img src="../../assets/images/w3/falls2.jpg" style="width:100%">
-    <img src="../../assets/images/w3/paris.jpg" style="width:100%">
-    <img src="../../assets/images/w3/nature.jpg" style="width:100%">
-    <img src="../../assets/images/w3/mist.jpg" style="width:100%">
-    <img src="../../assets/images/w3/paris.jpg" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="../../assets/images/w3/underwater.jpg" style="width:100%">
-    <img src="../../assets/images/w3/ocean.jpg" style="width:100%">
-    <img src="../../assets/images/w3/wedding.jpg" style="width:100%">
-    <img src="../../assets/images/w3/mountainskies.jpg" style="width:100%">
-    <img src="../../assets/images/w3/rocks.jpg" style="width:100%">
-    <img src="../../assets/images/w3/underwater.jpg" style="width:100%">
-  </div>
 </div>
