--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -7,6 +7,7 @@
     <div class="col s5" style=" padding-top: 15%;">
         <img src="../../assets/images/my-logo.png" id="logo">
     </div>
+    
     <div class="col s7">
         <div class="teamContent"><i class="fas fa-globe-americas"></i><span class="teamTITLE">Our Vision</span>
             <div>Pigment the dazzling destination to trade engaging on digital outlook.</div>
@@ -19,13 +20,13 @@
         <div class="teamContent"><i class="fa fa-users shuu" aria-hidden="true"></i><span class="teamTITLE">Our Team</span>
         <div>Our web and mobile software engineers are engaged with customers and commercial teams to deliver the prime element with market correspondence. In due course, we have devised eminently conductive and collaborative development and working atmosphere using the trending architectural facilities and communication technologies. Hence, our customers sense ultimate amenity despite language, culture, and time zone hurdles.</div>
         </div>
-    </div>    
+    </div>  
 </div>
 
 
 
 
-
+ 
 <div class="row center">
     <img src="../../assets/images/careers-bg.png" style="padding-top: 8%;">
 </div>
@@ -33,29 +34,32 @@
 <div class="row" style="padding-top: 4%;">
     <div class="col s5" style="padding: 20px 100px;">
         <div class="row">
-                <p class="styleTxt">Unitrix</p>
-                <ul class="icon">
+        <div class="floatText" style="left: 8px;">C<span>O</span></div>
+                <p class="styleTxt center">Unitrix</p>
+                <ul class="icon" style="text-align: -webkit-center;">
                     <li>
-                        <div class="chip">
-                            <img src="../../assets/images/jaganRamanikanth.png" alt="Contact Person">
-                            Jagan R
-                          </div>
+                        <div>
+                        <img class="Myavatar" src="../../assets/images/jaganRamanikanth.png">
+                        </div>
+
                     </li>
-                    <li><i class="fas fa-address-book"></i> +91 894-041-7854</li>
-                    <li><i class="fas fa-mail-bulk"></i> jaganramanikanth@gmail.com</li>
+                    <li class="name">Jagan R</li>
+                    <li><i class="fas fa-address-book"></i><b>Mobile :</b> (+91) 894-041-7854</li>
+                    <li><i class="fas fa-mail-bulk"></i><b>Email :</b> jaganramanikanth@gmail.com</li>
                   </ul>
         </div>
         <div class="row">
-                <p class="styleTxt">PhotoZing</p>
-                <ul class="icon">
+                <p class="styleTxt center">PhotoZing</p>
+                <ul class="icon" style="text-align: -webkit-center;">
                     <li>
-                        <div class="chip">
-                            <img src="../../assets/images/jaganRamanikanth.png" alt="Contact Person">
-                            Dhanush
-                          </div>
+                        <div>
+                        <img class="Myavatar" src="../../assets/images/DK.jpeg">
+                        </div>
+                        
                     </li>
-                    <li><i class="fas fa-address-book"></i> +91 962-977-7100</li>
-                    <li><i class="fas fa-mail-bulk"></i> dhanushkodi95@gmail.com</li>
+                    <li class="name">Dhanush Kodi</li>
+                    <li><i class="fas fa-address-book"></i><b>Mobile :</b> (+91) 962-977-7100</li>
+                    <li><i class="fas fa-mail-bulk"></i><b>Email :</b> dhanushkodi95@gmail.com</li>
                   </ul>
         </div>
     </div>
