--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -103,7 +103,7 @@
     top: -16px;
     border-color: transparent transparent #2168f3 transparent;
     border-width: 8px;
-    left: calc(100% - 513px);
+    left: calc(100% - 51%);
 }
 
 .hide-on-large-only  #logo{
