--- a/src/styles.css
+++ b/src/styles.css
@@ -44,20 +44,102 @@
 p,h1,h2,h3,h4,h5{
     margin: 0px !important;
 }
+.floatText{
+    position: absolute;
+    left: 48px;
+    line-height: 120px;
+    font-size: 400px;
+    font-weight: 700;
+    color: rgba(173,173,173,0.07);
+    text-transform: uppercase;
+}
+.clientName{
+    color:#00c3ff;
+}
+.carouselTxt{
+    height: 100%;
+    background: #f5f5f5;
+    border: 1px solid #eee;
+    border-radius: 4px;
+    letter-spacing: .2px;
+    padding: 10px;
+    color: #5f5f65;
+}
+.line{
+    position: relative;
+    font-size: 35px;
+    color: #222222;
+    font-weight: 600;
+    line-height: 1.3em;
+    padding-bottom: 20px;
+    display: inline-block;
+    letter-spacing: 2px;
+}
+.carousel{
+    margin: 0px !important;
+    width: unset !important;
+    height: inherit !important;
+}
+.line::after{
+    position: absolute;
+    content: '';
+    margin-top: 3%;
+    left: 46%;
+    width: 42px;
+    height: 3px;
+    background-color: #fa7400;
+}
+.subHead{
+    position: relative;
+    color: #fa7400;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.4em;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+    text-transform: uppercase;
+}
+.floatText span{
+    position: relative;
+    z-index: -1;
+    line-height: 250px;
+    color: rgba(255,255,255,1);
+    text-shadow: -1px -1px 0 #eeeeee, 1px -1px 0 #eeeeee, -1px 1px 0 #eeeeee, 1px 1px 0 #eeeeee;
+}
+.name{
+    font-size: 18px;
+    font-weight: 400;
+    color: #0089ec;
+    letter-spacing: 2px;
+}
 .border{
     border: 1px solid #d1d1d1;
     padding: 20px 0 0 0;
-    margin: 0px 60px !important;
+    margin: 0px calc(100% - 92%) !important;
     border-radius: 4px;
 }
 .we{   
     margin-top: -43px !important;
-    width: 18%;
+    width: 25%;
     background: #fff;
     font-weight: 300;
     margin-bottom: 2% !important;
     text-align: center;
-    margin-left: 42% !important;
+    margin-left: 37% !important;
+}
+.modal.bottom-sheet{
+    max-height: 50% !important;
+}
+.Myavatar{
+    display: block;
+    width: 75px;
+    height: 75px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    border-radius: 99em;
+    border: 2px solid #eee;
+    box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3);
 }
 
 @media only screen and (max-width: 600px){
