--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,12 +1,12 @@
 <div class="footer">
-<div class="row" style="padding: 50px 34px 38px;">
+<div class="row mobilepaddz" style="padding: 50px 34px 38px;">
   <div class="col s3 ">
       <span class="FooterTitle">Services</span>
     <ul>
       <li routerLink="/App-Development">Web Development</li>
       <li routerLink="/Desktop-Development">Desktop Application</li>
       <li routerLink="/Mobile-Development">Mobile Apps</li>
-      <li routerLink="/App-Development">Ecommerce</li>
+      <li routerLink="/Cloud">Cloud</li>
       <li routerLink="/Photo-Outsourcing">Photo Outsourcing</li>
       <li routerLink="/App-Development">Firebase</li>
       <li routerLink="/seo">Search Engine Optimization</li>
@@ -18,6 +18,7 @@
     <ul>
         <li routerLink="/home">Home</li>
         <li>Services</li>
+        <li routerLink="/Cloud">Cloud</li>
         <li routerLink="/Portfolio">Gallery</li>
         <li routerLink="/Photo-Outsourcing">PhotoZing</li>
         <li routerLink="/team">Contact us</li>
@@ -35,7 +36,7 @@
           </ul>
     </div>
   </div>
-  <div class="col s3 center">
+  <div class="col s3 center hide-on-small-only">
       <div style="margin-top:17%;"> <img src="../../assets/images/my-logo.png" style="width: 75%;"> </div>
       <div class="row">
           <i class="fas fa-mortar-pestle"></i> "Your Content is Our Concern"....
@@ -50,8 +51,9 @@
 </div>
 <div class="copyright">
   Copyright © Unitrix Inc. All Rights Reserved
-<div class="footerMenuLink right">
+<div class="footerMenuLink right hide-on-med-and-down">
   <span class="navName footerMenu"  routerLink="/home" routerLinkActive="TextBold">Home</span>
+  <span class="navName footerMenu"  routerLink="/Cloud" routerLinkActive="TextBold">Cloud</span>
   <span class="navName footerMenu" routerLink="/Portfolio" routerLinkActive="TextBold">Portfolio</span>
   <span class="navName footerMenu" routerLink="/Photo-Outsourcing" routerLinkActive="TextBold">PhotoZing</span>
   <span class="navName footerMenu" routerLink="/team" routerLinkActive="TextBold">Contact Us</span>  
