--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -81,7 +81,7 @@
                 </div>
                 <div class="col s4 serviceB" routerLink="/Desktop-Development">
                                 <h6 class="Ser">Desktop Application</h6>
-                                <p> <i class="fas fa-laptop-code"  style="color:#ff833b"></i> Desktop Application - we provide a desktop application for all platform, here we use <a href="https://electronjs.org/">Electron</a> Framework that provide to write a code onces then we can generate application in all platform ios, Windows and Linux ,we include <a href="https://www.google.com/search?q=js+frameworks&rlz=1C1CHBF_enIN844IN844&oq=JS+frame&aqs=chrome.0.0j69i57j0l4.4660j1j7&sourceid=chrome&ie=UTF-8">JS framework</a> in the electron so Application look stylish and performance high.</p>
+                                <p><i class="fas fa-laptop-code"  style="color:#ff833b"></i> Desktop Application - we provide a desktop application for all platform, here we use <a href="https://electronjs.org/">Electron</a> Framework that provide to write a code onces then we can generate application in all platform ios, Windows and Linux ,we include <a href="https://www.google.com/search?q=js+frameworks&rlz=1C1CHBF_enIN844IN844&oq=JS+frame&aqs=chrome.0.0j69i57j0l4.4660j1j7&sourceid=chrome&ie=UTF-8">JS framework</a> in the electron so Application look stylish and performance high.</p>
                 </div>
                 
         </div>
@@ -106,10 +106,12 @@
 <h1 class="subHead">TESTIMONIALS</h1>
 <h2 class="line">What our clients speak about us </h2>
         <div class="col s12 center" style="margin-top: 1%;">
-                <rotate-carousel height="200px" width="700px" depth="700px" period="7s" direction="reverse">
+                <rotate-carousel height="200px" width="700px" depth="700px" period="90s" direction="reverse">
                 <ng-template rotateCarouselItem>
                         <div class="carouselTxt">
                         <h5 style="padding: 12px;">Hi ! I'm <span class="clientName">Deepan Chakravarthi</span></h5>
+                        <div style="float:left;"><img class="Myavatar" src="../../assets/images/DK.jpeg"></div>
+                        
                         " I recommend Unitrix to everyone looking for app development. 
 The developers at the company were prompt in developing the seamless mobile applications 
 that not only fit my specifications but also exceeded my expectations.
@@ -118,7 +120,8 @@ I am really impressed by their talent and professionalism."</div>
                 </ng-template>
                 <ng-template rotateCarouselItem>
                         <div class="carouselTxt">
-                        <h5 style="padding: 12px;">Hi ! I'm <span class="clientName">Felisha</span></h5>
+                        <h5 style="padding: 12px;">Hi ! I'm <span class="clientName">Felicia Robert</span></h5>
+                        <div style="float:left;"><img class="Myavatar" src="../../assets/images/DK.jpeg"></div>
                         "Unitrix is a highly skilled team with an eye for details.
  We got exactly what we wanted and more. The project management and communication team 
  works really well through the online project tools and the dedicated project manager
@@ -129,7 +132,7 @@ I am really impressed by their talent and professionalism."</div>
 </div>
 
 <div class="row center our">
-        <img src="../../assets/images/careers-bg.png" style="padding-top: 6%;">
+        <img src="../../assets/images/careers-bg.png" width="48%" style="padding-top: 6%;">
         <h5 style="padding-top:2%;">Unitrix - Together we are better</h5>
         <div class="row" style="padding-top: 1%;
         font-size: 15px;
@@ -163,6 +166,6 @@ I am really impressed by their talent and professionalism."</div>
 
 <div class="row center" style="margin: 6% 0px;">
 <div class="floatText">W<span></span></div>
-        <h6 class="webContent" style="font-size: 15px;">" We target the progress of web solutions to the requirement of the organization and align the layout towards the client who will value it to show outstanding experience, to reform processes, to deliver unique services over the internet and to unite information cautiously in a centralized cache and access it in real time."</h6>
+        <h6 class="col s12 webContent" style="font-size: 15px;">" We target the progress of web solutions to the requirement of the organization and align the layout towards the client who will value it to show outstanding experience, to reform processes, to deliver unique services over the internet and to unite information cautiously in a centralized cache and access it in real time."</h6>
 </div>
 </div>
