--- a/src/app/mob-dev/mob-dev.component.html
+++ b/src/app/mob-dev/mob-dev.component.html
@@ -43,31 +43,31 @@ methodology to create a perfect app for your business.</p>
   <div class="row">
   <div class="col s6">
     <ul class="our">
-                <li><i class="fas fa-cannabis"></i> Business Apps Development</li>
-								<li><i class="fas fa-cannabis"></i> Education Apps Development</li>
-								<li><i class="fas fa-cannabis"></i> Social Networking Apps Development</li>
-								<li><i class="fas fa-cannabis"></i> Entertainment Apps Development</li>
-								<li><i class="fas fa-cannabis"></i> Travel Apps Development</li>
-								<li><i class="fas fa-cannabis"></i> Book App Development</li>
-								<li><i class="fas fa-cannabis"></i> Navigation Apps Development</li>
-								<li><i class="fas fa-cannabis"></i> News App Development</li>
-								<li><i class="fas fa-cannabis"></i> Health &amp; Fitness Apps Development</li>
-								<li><i class="fas fa-cannabis"></i> Lifestyle Apps Development</li>
-								<li><i class="fas fa-cannabis"></i> Finance Apps Development</li>
-								<li><i class="fas fa-cannabis"></i> Product Showcase App Development</li>
+                <li><i class="fas fa-map-pin"></i> Business Apps Development</li>
+								<li><i class="fas fa-map-pin"></i> Education Apps Development</li>
+								<li><i class="fas fa-map-pin"></i> Social Networking Apps Development</li>
+								<li><i class="fas fa-map-pin"></i> Entertainment Apps Development</li>
+								<li><i class="fas fa-map-pin"></i> Travel Apps Development</li>
+								<li><i class="fas fa-map-pin"></i> Book App Development</li>
+								<li><i class="fas fa-map-pin"></i> Navigation Apps Development</li>
+								<li><i class="fas fa-map-pin"></i> News App Development</li>
+								<li><i class="fas fa-map-pin"></i> Health &amp; Fitness Apps Development</li>
+								<li><i class="fas fa-map-pin"></i> Lifestyle Apps Development</li>
+								<li><i class="fas fa-map-pin"></i> Finance Apps Development</li>
+								<li><i class="fas fa-map-pin"></i> Product Showcase App Development</li>
                                 </ul>
   </div>
   <div class="col s6">
     <ul class="our">
-                  <li><i class="fas fa-cannabis"></i> Website Mobile App Development</li>	
-                  <li><i class="fas fa-cannabis"></i> POS ( point of sale ) Mobile App Development</li>	
-                  <li><i class="fas fa-cannabis"></i> Retail Store Mobile App Development</li>						
-                  <li><i class="fas fa-cannabis"></i> Printing Mobile App Development</li>					
-                  <li><i class="fas fa-cannabis"></i> Accounting Mobile App Development</li>					
-                  <li><i class="fas fa-cannabis"></i> Insurance Mobile App Development</li>			
-                  <li><i class="fas fa-cannabis"></i> Hospitality Mobile App Development</li>					
-                  <li><i class="fas fa-cannabis"></i> Healthcare Mobile App Development</li>				
-                  <li><i class="fas fa-cannabis"></i> Restaurant Mobile App Development</li>
+                  <li><i class="fas fa-map-pin"></i> Website Mobile App Development</li>	
+                  <li><i class="fas fa-map-pin"></i> POS ( point of sale ) Mobile App Development</li>	
+                  <li><i class="fas fa-map-pin"></i> Retail Store Mobile App Development</li>						
+                  <li><i class="fas fa-map-pin"></i> Printing Mobile App Development</li>					
+                  <li><i class="fas fa-map-pin"></i> Accounting Mobile App Development</li>					
+                  <li><i class="fas fa-map-pin"></i> Insurance Mobile App Development</li>			
+                  <li><i class="fas fa-map-pin"></i> Hospitality Mobile App Development</li>					
+                  <li><i class="fas fa-map-pin"></i> Healthcare Mobile App Development</li>				
+                  <li><i class="fas fa-map-pin"></i> Restaurant Mobile App Development</li>
                                 </ul>
   </div>
  </div>
